# imagine

./: .gitignore  README.md  pyproject.toml
src/imagine/: __init__.py  __main__.py  cli.py  config.py  display.py  lumenfall.py  tui.py
tests/: __init__.py  test_config.py  test_display.py
